tests/expectations/parser/functions/test_keyword_fail.out
Error [EPAR0370047]: expected `import`, `program`, or module item at top level
    --> test:3:1
     |
   3 | test main() {}
     | ^^^^
